--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,40 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  # Laravel Backend
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
     container_name: star-backend
-    ports:
-      - "8000:8000"
     volumes:
-      - ./backend:/var/www/html
       - ./backend/storage:/var/www/html/storage
+      - app-public:/var/www/html/public
     environment:
-      - APP_ENV=local
-      - APP_DEBUG=true
+      - APP_ENV=production
+      - APP_DEBUG=false
+      - LOG_CHANNEL=stderr
       - DB_CONNECTION=sqlite
-      - DB_DATABASE=/var/www/html/database/database.sqlite
+      - DB_DATABASE=/var/www/html/storage/app/database.sqlite
+    restart: unless-stopped
     networks:
       - star-network
 
-  # Vue Frontend
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: star-frontend
+  nginx:
+    image: nginx:alpine
+    container_name: star-nginx
     ports:
-      - "5173:5173"
+      - "8008:80"
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - VITE_API_BASE_URL=http://localhost:8000/api
-    networks:
-      - star-network
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - app-public:/var/www/html/public:ro
+      - ./backend/storage:/var/www/html/storage:ro
     depends_on:
       - backend
+    restart: unless-stopped
+    networks:
+      - star-network
+
+volumes:
+  app-public:
 
 networks:
   star-network:
