--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - app-public:/var/www/html/public
     environment:
       - APP_ENV=production
+      - TZ=Asia/Shanghai
       - APP_DEBUG=false
       - LOG_CHANNEL=stderr
       - DB_CONNECTION=sqlite
